# lucent

./: .gitignore  LICENSE  README.md  THIRD-PARTY-NOTICES.md
.github/workflows/: build-windows.yml  build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  lucent_llama.cpp
app/src/main/java/com/lucent/app/: GenerationService.kt  I18n.kt  MainActivity.kt
app/src/main/java/com/lucent/app/data/: AppDatabase.kt  AppLock.kt  AttachmentAccess.kt  AttachmentLimits.kt  AttachmentStore.kt  BackupCrypto.kt  BackupManager.kt  BiometricAuth.kt  ChatSearch.kt  Checklist.kt  CryptoUtil.kt  Daos.kt  DataCache.kt  DataKeys.kt  DatabaseEncryption.kt  DocumentExport.kt  Entities.kt  FileCrypto.kt  FontStore.kt  LocalSecrets.kt  NoteHistory.kt  NoteStats.kt  NoteTemplates.kt  RecoverableSecret.kt  Recurrence.kt  SearchQuery.kt  SettingsRepository.kt  ShareIntegration.kt  StartupLog.kt  TaskInsights.kt  TaskPriority.kt  TokenEstimator.kt  UsageTracker.kt
app/src/main/java/com/lucent/app/i18n/: I18n.kt
app/src/main/java/com/lucent/app/local/: LocalLlm.kt  LocalModelStore.kt
app/src/main/java/com/lucent/app/network/: ApiModels.kt  LlmClient.kt  WebSearchClient.kt
app/src/main/java/com/lucent/app/reminders/: BootReceiver.kt  NotificationActionReceiver.kt  Notifications.kt  ReminderReceiver.kt  ReminderScheduler.kt
app/src/main/java/com/lucent/app/tools/: AppTools.kt
app/src/main/java/com/lucent/app/tools/i18n/: catalog.py
app/src/main/java/com/lucent/app/ui/: AndroidRobotIcon.kt  AppLockScreen.kt  ArchivedNotesScreen.kt  AssistantConfirmDialog.kt  AssistantController.kt  AssistantScreen.kt  AttachmentUi.kt  AttachmentViewer.kt  ChecklistEditor.kt  ClipboardUtil.kt  CompletedTasksScreen.kt  ExpandableTextField.kt  ExportSelectionScreen.kt  FluidGlassBackground.kt  Glass.kt  Haptics.kt  HomeSections.kt  ImageEditor.kt  LucentFonts.kt  NoteColors.kt  NoteHistoryScreen.kt  NotesScreen.kt  PdfViewer.kt  SearchScreen.kt  SettingsScreen.kt  ShareIntake.kt  SortOptions.kt  SplashScreen.kt  TaskStyling.kt  TasksScreen.kt  ThemeModes.kt  Toasts.kt  TrashNotesScreen.kt  TrashTasksScreen.kt  UiComponents.kt  UnsavedChangesGuard.kt  WidgetTaskConfirmDialog.kt
app/src/main/java/com/lucent/app/widget/: LucentWidgets.kt  WidgetActions.kt
app/src/main/res/layout/: widget_assistant.xml  widget_new_note.xml  widget_new_task.xml  widget_quick_actions.xml  widget_task_summary.xml  widget_today_tasks.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/xml/: widget_assistant_info.xml  widget_new_note_info.xml  widget_new_task_info.xml  widget_pinned_note_info.xml  widget_quick_actions_info.xml  widget_task_summary_info.xml  widget_today_tasks_info.xml
desktop/: build.gradle.kts
desktop/native/: CMakeLists.txt
desktop/native/shim/android/: log.h
desktop/src/main/kotlin/android/content/: Context.kt
desktop/src/main/kotlin/android/os/: SystemClock.kt
desktop/src/main/kotlin/android/text/format/: DateFormat.kt
desktop/src/main/kotlin/android/util/: Base64.kt  Log.kt
desktop/src/main/kotlin/androidx/activity/compose/: BackHandler.kt
desktop/src/main/kotlin/androidx/compose/ui/platform/: LocalContext.kt
desktop/src/main/kotlin/com/lucent/app/: AppNavigation.kt  AppScope.kt  GenerationService.kt  Screen.kt  WidgetUpdater.kt
desktop/src/main/kotlin/com/lucent/app/data/: ApiProfile.kt  AppDatabase.kt  Attachment.kt  AttachmentAccess.kt  AttachmentLimits.kt  AttachmentMigration.kt  AttachmentStore.kt  BackupCrypto.kt  BackupManager.kt  Daos.kt  DataKeys.kt  Db.kt  DocumentExport.kt  DueParsing.kt  Entities.kt  FontStore.kt  LocalSecrets.kt  MarkdownExport.kt  MemoryTier.kt  NoteLinks.kt  NoteTemplates.kt  SettingsRepository.kt  ShareIntegration.kt  StartupLog.kt  TokenEstimator.kt  TrashCleanup.kt  UsageTracker.kt
desktop/src/main/kotlin/com/lucent/app/i18n/: I18n.kt
desktop/src/main/kotlin/com/lucent/app/local/: LocalLlm.kt  LocalModelStore.kt
desktop/src/main/kotlin/com/lucent/app/nativebridge/: LucentNative.kt  NativeLoader.kt
desktop/src/main/kotlin/com/lucent/app/network/: ApiModels.kt  LlmClient.kt  WebSearchClient.kt
desktop/src/main/kotlin/com/lucent/app/reminders/: Notifications.kt  ReminderScheduler.kt
desktop/src/main/kotlin/com/lucent/app/security/: WindowsHello.kt
desktop/src/main/kotlin/com/lucent/app/tools/: AppTools.kt  TaskActions.kt
desktop/src/main/kotlin/com/lucent/app/ui/: AppLockScreen.kt  AssistantConfirmDialog.kt  AssistantController.kt  AssistantScreen.kt  AttachmentUi.kt  AttachmentViewer.kt  ChecklistEditor.kt  ClipboardUtil.kt  CompletedTasksScreen.kt  ExpandableTextField.kt  ExportSelectionScreen.kt  FluidGlassBackground.kt  Glass.kt  Haptics.kt  HomeSections.kt  ImageEditor.kt  InsightsScreen.kt  LucentFonts.kt  Markdown.kt  NoteColors.kt  NoteHistoryScreen.kt  NotesScreen.kt  SettingsScreen.kt  SortOptions.kt  SplashScreen.kt  TaskStyling.kt  TasksScreen.kt  Toasts.kt  TrashNotesScreen.kt  UiComponents.kt
desktop/src/main/kotlin/com/lucent/desktop/: CipherSelfCheck.kt  DesktopApp.kt  DesktopSettingsScreen.kt  Main.kt  Sidebar.kt
desktop/src/main/kotlin/com/lucent/desktop/platform/: DateTimePickers.kt  DesktopShare.kt  FileDialogs.kt
tools/i18n/: catalog.py  gen_i18n.py
